--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 body{
-  background-color: red;
+  background-color: grey;
 }
 html{
-  background-color: red;
+  background-color: green;
 }
 .container{
 
