--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,10 @@
+#output{
+  color: black;
+  font-size: 40px;
+  text-align: center;
+  font-weight: bold;
+}
+
 body {
   background-color: red;
 }
